--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DistanceCalc</string>
+    <string name="text_view1">Enter First Coordinate</string>
+    <string name="text_view2">Enter Second Coordinate</string>
+    <string name="button1">Go</string>
 </resources>
